--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./src/assets/images/svg/Favicon.svg" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sakroob</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="./src/assets/images/svg/Favicon.svg" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Primary Meta Tags -->
+  <title>sakrob</title>
+  <meta name="title" content="Where Tinkerers Bring Ideas Alive" />
+  <meta name="description" content="Explore niche tech gear, DIY kits, and pro tools — built for creators, gamers, and engineers.
+" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sakroob.vercel.app/home" />
+  <meta property="og:title" content="Where Tinkerers Bring Ideas Alive" />
+  <meta property="og:description" content="Explore niche tech gear, DIY kits, and pro tools — built for creators, gamers, and engineers.
+" />
+  <meta property="og:image" content="/meta-img.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://sakroob.vercel.app/home" />
+  <meta property="twitter:title" content="Where Tinkerers Bring Ideas Alive" />
+  <meta property="twitter:description" content="Explore niche tech gear, DIY kits, and pro tools — built for creators, gamers, and engineers.
+" />
+  <meta property="twitter:image" content="/meta-img.png" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
